[metadata]
name = pync
version = 0.0.1
author = brenw0rth
description = An attempt at creating netcat with python.
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    pync = pync:nc

